--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=GameDatabase;Trusted_Connection=True;"
+    "DefaultConnection": ""
   },
   "Logging": {
     "LogLevel": {
